# rwa-token

implementations/: README.md
implementations/fractional-real-estate/: README.md
implementations/fractional-real-estate/on-chain/: Anchor.toml  Cargo.toml  README.md
implementations/fractional-real-estate/on-chain/programs/mint-machine/: Cargo.toml
implementations/fractional-real-estate/on-chain/programs/mint-machine/src/state/: mod.rs
implementations/fractional-real-estate/on-chain/programs/mint_machine/: Cargo.toml
implementations/fractional-real-estate/on-chain/programs/mint_machine/src/: lib.rs
implementations/fractional-real-estate/on-chain/programs/mint_machine/src/instructions/: mint_token.rs  mod.rs
implementations/fractional-real-estate/on-chain/programs/mint_machine/src/state/: mod.rs
implementations/fractional-real-estate/on-chain/tests/: mint-machine.ts
